First_Step/data/46/117/grade_comments.txt
-The compilation or preparation of execution has failed
Tools.java:22: error: incompatible types
        return Arrays.sort(tab);
                          ^
  required: int
  found:    void
1 error
Not compiled
